--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 <body>
 
 
-<img id="nahid" src="img/nahid.jpg">
+<img id="nahid" src="img/img (10).jpg">
 
 <div id="slideshow">
             <button id="discordButton" onclick="window.location.href='https://discord.gg/ZDJ8xykcyJ'">Junte-se ao Medo!!</button>
-            <img class="slide" src="img/img (1).jpg" alt="Image 1">
+<img class="slide" src="img/img (1).jpg" alt="Image 1">
 <img class="slide" src="img/img (2).jpg" alt="Image 2">
 <img class="slide" src="img/img (3).jpg" alt="Image 3">
 <img class="slide" src="img/img (4).jpg" alt="Image 4">
