nahid back at background

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
 
 
-<img id="nahid" src="img/img (10).jpg">
+<img id="nahid" src="img/nahid.jpg">
 
 <div id="slideshow">
             <button id="discordButton" onclick="window.location.href='https://discord.gg/ZDJ8xykcyJ'">Junte-se ao Medo!!</button>
