--- a/index.html
+++ b/index.html
@@ -56,12 +56,23 @@
             font-size: 16px;
             cursor: pointer;
         }
+
+        #divHeader {
+            height: 40px;
+            font-size: 30px;
+            color: white;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
 
 
 <img id="nahid" src="img/nahid.jpg">
+
+<div id="divHeader">
+    Universo do Medo
+</div>
 
 <div id="slideshow">
             <button id="discordButton" onclick="window.location.href='https://discord.gg/ZDJ8xykcyJ'">Junte-se ao Medo!!</button>
