--- a/index.html
+++ b/index.html
@@ -1,132 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-        <!DOCTYPE html>
-<html lang="en">
-<head>
-
+    <head>
         <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universo do Medo RPG</title>
-                <link rel="icon" type="image/png" href="https://s3.sa-east-1.amazonaws.com/universodomedo.com/favicon-32x32.png">
-    <style>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Universo do Medo RPG</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" href="https://s3.sa-east-1.amazonaws.com/universodomedo.com/favicon-32x32.png">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <!-- <a href="#section1">Seção 1</a> <a href="#section2">Seção 2</a> <a href="#section3">Seção 3</a> -->
+                <button id="discordButton" onclick="window.location.href='https://discord.gg/ZDJ8xykcyJ'">Junte-se ao Medo!!</button>
+            </nav>
+        </header>
 
-        body {
-            margin: 0;
-            padding: 0;
-        }
+        <section id="section1">
+            <div id="slideshow">
+                <img class="slide" src="img/img (1).jpg" alt="Image 1" style="display: block;">
+                <img class="slide" src="img/img (2).jpg" alt="Image 2">
+                <img class="slide" src="img/img (3).jpg" alt="Image 3">
+                <img class="slide" src="img/img (4).jpg" alt="Image 4">
+                <img class="slide" src="img/img (5).jpg" alt="Image 5">
+                <img class="slide" src="img/img (6).jpg" alt="Image 6">
+                <img class="slide" src="img/img (7).jpg" alt="Image 7">
+                <img class="slide" src="img/img (8).jpg" alt="Image 8">
+                <img class="slide" src="img/img (9).jpg" alt="Image 9">
+                <img class="slide" src="img/img (10).jpg" alt="Image 10">
+                <img class="slide" src="img/img (11).jpg" alt="Image 11">
+                <img class="slide" src="img/img (12).jpg" alt="Image 12">
+                <img class="slide" src="img/img (13).jpg" alt="Image 13">
+                <img class="slide" src="img/img (14).jpg" alt="Image 14">
+                <img class="slide" src="img/img (15).jpg" alt="Image 15">
+                <img class="slide" src="img/img (16).jpg" alt="Image 16">
+                <img class="slide" src="img/img (17).jpg" alt="Image 17">
+                <img class="slide" src="img/img (18).jpg" alt="Image 18">
+                <img class="slide" src="img/img (19).jpg" alt="Image 19">
+                <img class="slide" src="img/img (20).jpg" alt="Image 20">
+                <img class="slide" src="img/img (21).jpg" alt="Image 21">
+                <img class="slide" src="img/img (22).jpg" alt="Image 22">
+                <img class="slide" src="img/img (23).jpg" alt="Image 23">
+                <img class="slide" src="img/img (24).jpg" alt="Image 24">
+                <img class="slide" src="img/img (25).jpg" alt="Image 25">
+                <img class="slide" src="img/img (26).jpg" alt="Image 26">
+                <img class="slide" src="img/img (27).jpg" alt="Image 27">
+                <img class="slide" src="img/img (28).jpg" alt="Image 28">
+                <img class="slide" src="img/img (29).jpg" alt="Image 29">
+                <img class="slide" src="img/img (30).jpg" alt="Image 30">
+            </div>
+        </section>
 
-        #nahid {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1; /* Higher z-index to ensure it's above the slideshow */
-            object-fit: cover;
-        }
+<!--         <section id="section2">
+            <div class="container">
+                <h2>Seção 2</h2>
+                <p>Nullam fringilla felis eu lorem dictum, nec volutpat tortor dictum. Morbi auctor nibh sed ipsum varius, a bibendum metus venenatis. In euismod turpis vel nisi sollicitudin, vitae convallis sapien malesuada. </p>
+            </div>
+        </section>
 
-        #slideshow{
-        height: 100vh; /* 100% of the viewport height */
-            margin: 0;
-            overflow: hidden; /* Prevent images from overflowing the viewport */
-        }
+        <section id="section3">
+            <div class="container">
+                <h2>Seção 3</h2>
+                <p>Vivamus volutpat nisi et ex sollicitudin, sit amet fermentum quam venenatis. Donec efficitur euismod lectus, a laoreet velit. In ut sapien vel velit condimentum venenatis.</p>
+            </div>
+        </section> -->
 
-        .slide{
-                display: none;
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Ensure images cover the entire container */
-        }
-
-        #discordButton {
-            position: absolute;
-            top: 30%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 10px 20px;
-            background-color: #7289da;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        #divHeader {
-            height: 40px;
-            font-size: 30px;
-            color: white;
-            text-align: center;
-        }
-    </style>
-</head>
-<body>
-
-
-<img id="nahid" src="img/nahid.jpg">
-
-<div id="divHeader">
-    Universo do Medo
-</div>
-
-<div id="slideshow">
-            <button id="discordButton" onclick="window.location.href='https://discord.gg/ZDJ8xykcyJ'">Junte-se ao Medo!!</button>
-<img class="slide" src="img/img (1).jpg" alt="Image 1">
-<img class="slide" src="img/img (2).jpg" alt="Image 2">
-<img class="slide" src="img/img (3).jpg" alt="Image 3">
-<img class="slide" src="img/img (4).jpg" alt="Image 4">
-<img class="slide" src="img/img (5).jpg" alt="Image 5">
-<img class="slide" src="img/img (6).jpg" alt="Image 6">
-<img class="slide" src="img/img (7).jpg" alt="Image 7">
-<img class="slide" src="img/img (8).jpg" alt="Image 8">
-<img class="slide" src="img/img (9).jpg" alt="Image 9">
-<img class="slide" src="img/img (10).jpg" alt="Image 10">
-<img class="slide" src="img/img (11).jpg" alt="Image 11">
-<img class="slide" src="img/img (12).jpg" alt="Image 12">
-<img class="slide" src="img/img (13).jpg" alt="Image 13">
-<img class="slide" src="img/img (14).jpg" alt="Image 14">
-<img class="slide" src="img/img (15).jpg" alt="Image 15">
-<img class="slide" src="img/img (16).jpg" alt="Image 16">
-<img class="slide" src="img/img (17).jpg" alt="Image 17">
-<img class="slide" src="img/img (18).jpg" alt="Image 18">
-<img class="slide" src="img/img (19).jpg" alt="Image 19">
-<img class="slide" src="img/img (20).jpg" alt="Image 20">
-<img class="slide" src="img/img (21).jpg" alt="Image 21">
-<img class="slide" src="img/img (22).jpg" alt="Image 22">
-<img class="slide" src="img/img (23).jpg" alt="Image 23">
-<img class="slide" src="img/img (24).jpg" alt="Image 24">
-<img class="slide" src="img/img (25).jpg" alt="Image 25">
-<img class="slide" src="img/img (26).jpg" alt="Image 26">
-<img class="slide" src="img/img (27).jpg" alt="Image 27">
-<img class="slide" src="img/img (28).jpg" alt="Image 28">
-<img class="slide" src="img/img (29).jpg" alt="Image 29">
-<img class="slide" src="img/img (30).jpg" alt="Image 30">
-</div>
-
-<script>
-    let currentIndex = 0;
-    const slides = document.getElementsByClassName('slide');
-
-    function showSlide(index) {
-        for (let i = 0; i < slides.length; i++) {
-            slides[i].style.display = i === index ? 'block' : 'none';
-        }
-    }
-
-    function nextSlide() {
-        currentIndex = (currentIndex + 1) % slides.length;
-        showSlide(currentIndex);
-    }
-
-    setInterval(nextSlide, 5000); // Change the duration (in milliseconds) between slides as needed
-</script>
-
-</body>
+        <footer>
+<!--             <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+            <a href="#">Instagram</a> -->
+        </footer>
+    </body>
 </html>
-</body>
-</html>
+
+<script type="text/javascript" src="./script.js"></script>
