commit inicial parcial do design

--- a/index.html
+++ b/index.html
@@ -7,69 +7,247 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="https://s3.sa-east-1.amazonaws.com/universodomedo.com/favicon-32x32.png">
     </head>
-    <body>
-        <header>
-            <nav>
-                <!-- <a href="#section1">Seção 1</a> <a href="#section2">Seção 2</a> <a href="#section3">Seção 3</a> -->
-                <button id="discordButton" onclick="window.location.href='https://discord.gg/ZDJ8xykcyJ'">Junte-se ao Medo!!</button>
-            </nav>
-        </header>
-
-        <section id="section1">
-            <div id="slideshow">
-                <img class="slide" src="img/img (1).jpg" alt="Image 1" style="display: block;">
-                <img class="slide" src="img/img (2).jpg" alt="Image 2">
-                <img class="slide" src="img/img (3).jpg" alt="Image 3">
-                <img class="slide" src="img/img (4).jpg" alt="Image 4">
-                <img class="slide" src="img/img (5).jpg" alt="Image 5">
-                <img class="slide" src="img/img (6).jpg" alt="Image 6">
-                <img class="slide" src="img/img (7).jpg" alt="Image 7">
-                <img class="slide" src="img/img (8).jpg" alt="Image 8">
-                <img class="slide" src="img/img (9).jpg" alt="Image 9">
-                <img class="slide" src="img/img (10).jpg" alt="Image 10">
-                <img class="slide" src="img/img (11).jpg" alt="Image 11">
-                <img class="slide" src="img/img (12).jpg" alt="Image 12">
-                <img class="slide" src="img/img (13).jpg" alt="Image 13">
-                <img class="slide" src="img/img (14).jpg" alt="Image 14">
-                <img class="slide" src="img/img (15).jpg" alt="Image 15">
-                <img class="slide" src="img/img (16).jpg" alt="Image 16">
-                <img class="slide" src="img/img (17).jpg" alt="Image 17">
-                <img class="slide" src="img/img (18).jpg" alt="Image 18">
-                <img class="slide" src="img/img (19).jpg" alt="Image 19">
-                <img class="slide" src="img/img (20).jpg" alt="Image 20">
-                <img class="slide" src="img/img (21).jpg" alt="Image 21">
-                <img class="slide" src="img/img (22).jpg" alt="Image 22">
-                <img class="slide" src="img/img (23).jpg" alt="Image 23">
-                <img class="slide" src="img/img (24).jpg" alt="Image 24">
-                <img class="slide" src="img/img (25).jpg" alt="Image 25">
-                <img class="slide" src="img/img (26).jpg" alt="Image 26">
-                <img class="slide" src="img/img (27).jpg" alt="Image 27">
-                <img class="slide" src="img/img (28).jpg" alt="Image 28">
-                <img class="slide" src="img/img (29).jpg" alt="Image 29">
-                <img class="slide" src="img/img (30).jpg" alt="Image 30">
+<body>
+    <div id="divHeader">
+        <div id="divContainerHeader">
+            <div id="divContainerHeaderLogo"></div>
+            <div id="divHeaderMenu">
+<!--                <div class="headerMenu" id="divHeaderMenu1">Link 1</div>
+                <div class="headerMenu" id="divHeaderMenu2">Link 2</div>
+                <div class="headerMenu" id="divHeaderMenu3">Link 3</div>
+                <div class="headerMenu" id="divHeaderMenu4">Link 4</div>
+                <div class="headerMenu" id="divHeaderMenu5">Link 5</div>
+                <div class="headerButton" id="divHeaderMenu6">Link 6</div> -->
             </div>
-        </section>
+            <div style="clear: both;"></div>
+        </div>
+    </div>
+    <div id="divSection1">
+        <div id="divSection1Center">
+            <h1>Descubra o</h1>
+            <h1 class="mb-3">Paranormal</h1>
+            <h2>Faça parte da guerra entre a Humanidade e o Paranormal</h2>
+            <h2 class="mb-3">Enfrente seus demônios internos e desvende os Segredos da Realidade</h2>
 
-<!--         <section id="section2">
-            <div class="container">
-                <h2>Seção 2</h2>
-                <p>Nullam fringilla felis eu lorem dictum, nec volutpat tortor dictum. Morbi auctor nibh sed ipsum varius, a bibendum metus venenatis. In euismod turpis vel nisi sollicitudin, vitae convallis sapien malesuada. </p>
-            </div>
-        </section>
+            <div id="divSection1WavesImg"></div>
+            <div id="divSection1BodyImg"></div>
 
-        <section id="section3">
-            <div class="container">
-                <h2>Seção 3</h2>
-                <p>Vivamus volutpat nisi et ex sollicitudin, sit amet fermentum quam venenatis. Donec efficitur euismod lectus, a laoreet velit. In ut sapien vel velit condimentum venenatis.</p>
-            </div>
-        </section> -->
-
-        <footer>
-<!--             <a href="#">Facebook</a>
-            <a href="#">Twitter</a>
-            <a href="#">Instagram</a> -->
-        </footer>
-    </body>
+        </div>
+    </div>
+    <div id="divSection2">
+        <div id="divSection2Center">
+            <h1 class="mb-6 mt-3">O Desconhecido Aguarda</h1>
+            <h2>Investigue os efeitos do Paranormal em lugares assombrados, heranças amaldiçoadas e na vida das pessoas</h2>
+            <h2>Compreenda as marcas do Outro Lado e como seus mensageiros se comportam</h2>
+            <h2>Deixe sua marca no mundo para que outros o sigam ou até mesmo o cacem</h2>
+        </div>
+    </div>
+    <div id="divSection3">
+        <div id="divSection3Center">
+            <h1 class="mb-6">Venha participar!</h1>
+            <iframe id="iframeYT1" src="https://www.youtube.com/embed/DdjyEwyg6Rw?si=Ga3WFl3EytvHeBof" allowfullscreen></iframe>
+        </div>
+    </div>
+<!--    <div id="divSection4">
+        <div id="divSection4Center">
+            <h1>Novidades</h1>
+        </div>
+    </div>
+    <div id="divSection5">
+    </div> -->
+</body>
 </html>
 
-<script type="text/javascript" src="./script.js"></script>
+<style type="text/css">
+    body {
+        margin: 0;
+        padding: 0;
+        height: 200vh;
+        width: 99vw;
+    }
+
+    h1 {
+        margin: 0;
+    }
+
+    #div0 {
+        width: 1920px;
+        height: 6000px;
+        margin: 0;
+        padding: 0;
+        background-image: url("./Untitled.png");
+        background-size: cover;
+        box-sizing: border-box;
+    }
+
+    #divHeader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 6%;
+        background-color: #000000;
+    }
+
+    #divContainerHeader {
+        display: flex;
+        width: 85%;
+        height: 70%;
+        box-sizing: border-box;
+    }
+
+    #divContainerHeaderLogo {
+        width: 18%;
+        background-image: url("./logo.png");
+        background-size: cover;
+        background-position: center;
+    }
+
+    #divHeaderMenu {
+        width: 70%;
+        /*background-color: #0000FF;*/
+        margin-left: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .headerMenu {
+        width: 20%;
+        height: 100%;
+        justify-content: center;
+    }
+
+    #divSection1 {
+        width: 100%;
+        height: 38%;
+        background-color: #000000;
+    }
+
+    #divSection1Center {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        padding: 2% 15% 0 15%;
+        box-sizing: border-box;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #divSection1Center h1 {
+        color: white;
+        font-family: system-ui;
+        text-transform: uppercase;
+        line-height: 0.9;
+        font-size: 5vh;
+        margin: 0;
+    }
+
+    #divSection1Center h2 {
+        color: white;
+        font-family: cursive;
+        line-height: 1.2;
+        font-size: 2vh;
+        margin: 0;
+    }
+
+    #divSection1WavesImg {
+        position: absolute;
+        width: 100%;
+        height: 30%;
+        bottom: 12%;
+        background-image: url("./waves1.svg");
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+        background-position: center;
+        opacity: .4;
+    }
+
+    #divSection1BodyImg {
+        width: 30%;
+        height: 70%;
+        background-image: url("./body.svg");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    #divSection2 {
+        width: 100%;
+        height: 12%;
+        background: linear-gradient(0deg, #1b1725, #000000);
+        padding-bottom: 6vh;
+    }
+
+
+    #divSection2Center {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        padding: 2% 13% 0 13%;
+        box-sizing: border-box;
+        flex-direction: column;
+    }
+
+    #divSection2Center h1 {
+        color: white;
+        font-family: system-ui;
+        text-transform: uppercase;
+        line-height: 0.9;
+        font-size: 5vh;
+        margin: 0;
+    }
+
+    #divSection2Center h2 {
+        color: white;
+        font-family: cursive;
+        line-height: 1.2;
+        font-size: 2vh;
+        margin: 0;
+    }
+
+    #divSection3 {
+        width: 100%;
+        /*height: 12%;*/
+        background: linear-gradient(0deg, #19102b, #1b1725);
+        padding-bottom: 10vh;
+    }
+
+    #divSection3Center {
+        text-align: center;
+    }
+
+    #divSection3Center h1 {
+        color: white;
+        font-family: system-ui;
+        text-transform: uppercase;
+        line-height: 0.9;
+        font-size: 5vh;
+        margin: 0;
+    }
+
+
+    #divSection4 {
+        width: 100%;
+        height: 12%;
+        background: linear-gradient(0deg, #35294f, #000000);
+    }
+
+    #divSection5 {
+        width: 100%;
+        height: 12%;
+        background: linear-gradient(0deg, #35294f, #000000);
+    }
+
+    iframe {
+        width: 1280px;
+        height: 720px;
+    }
+
+
+
+
+    .mb-3 { margin-bottom: 2vh !important; }
+    .mb-6 { margin-bottom: 4vh !important; }
+    .mt-3 { margin-top: 2vh !important; }
+</style>
