Commit para React, Visual Inicial

--- a/index.html
+++ b/index.html
@@ -1,253 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Universo do Medo RPG</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/png" href="https://s3.sa-east-1.amazonaws.com/universodomedo.com/favicon-32x32.png">
-    </head>
-<body>
-    <div id="divHeader">
-        <div id="divContainerHeader">
-            <div id="divContainerHeaderLogo"></div>
-            <div id="divHeaderMenu">
-<!--                <div class="headerMenu" id="divHeaderMenu1">Link 1</div>
-                <div class="headerMenu" id="divHeaderMenu2">Link 2</div>
-                <div class="headerMenu" id="divHeaderMenu3">Link 3</div>
-                <div class="headerMenu" id="divHeaderMenu4">Link 4</div>
-                <div class="headerMenu" id="divHeaderMenu5">Link 5</div>
-                <div class="headerButton" id="divHeaderMenu6">Link 6</div> -->
-            </div>
-            <div style="clear: both;"></div>
-        </div>
-    </div>
-    <div id="divSection1">
-        <div id="divSection1Center">
-            <h1>Descubra o</h1>
-            <h1 class="mb-3">Paranormal</h1>
-            <h2>Faça parte da guerra entre a Humanidade e o Paranormal</h2>
-            <h2 class="mb-3">Enfrente seus demônios internos e desvende os Segredos da Realidade</h2>
-
-            <div id="divSection1WavesImg"></div>
-            <div id="divSection1BodyImg"></div>
-
-        </div>
-    </div>
-    <div id="divSection2">
-        <div id="divSection2Center">
-            <h1 class="mb-6 mt-3">O Desconhecido Aguarda</h1>
-            <h2>Investigue os efeitos do Paranormal em lugares assombrados, heranças amaldiçoadas e na vida das pessoas</h2>
-            <h2>Compreenda as marcas do Outro Lado e como seus mensageiros se comportam</h2>
-            <h2>Deixe sua marca no mundo para que outros o sigam ou até mesmo o cacem</h2>
-        </div>
-    </div>
-    <div id="divSection3">
-        <div id="divSection3Center">
-            <h1 class="mb-6">Venha participar!</h1>
-            <iframe id="iframeYT1" src="https://www.youtube.com/embed/DdjyEwyg6Rw?si=Ga3WFl3EytvHeBof" allowfullscreen></iframe>
-        </div>
-    </div>
-<!--    <div id="divSection4">
-        <div id="divSection4Center">
-            <h1>Novidades</h1>
-        </div>
-    </div>
-    <div id="divSection5">
-    </div> -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Universo do Medo</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
-
-<style type="text/css">
-    body {
-        margin: 0;
-        padding: 0;
-        height: 200vh;
-        width: 99vw;
-    }
-
-    h1 {
-        margin: 0;
-    }
-
-    #div0 {
-        width: 1920px;
-        height: 6000px;
-        margin: 0;
-        padding: 0;
-        background-image: url("./Untitled.png");
-        background-size: cover;
-        box-sizing: border-box;
-    }
-
-    #divHeader {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 6%;
-        background-color: #000000;
-    }
-
-    #divContainerHeader {
-        display: flex;
-        width: 85%;
-        height: 70%;
-        box-sizing: border-box;
-    }
-
-    #divContainerHeaderLogo {
-        width: 18%;
-        background-image: url("./logo.png");
-        background-size: cover;
-        background-position: center;
-    }
-
-    #divHeaderMenu {
-        width: 70%;
-        /*background-color: #0000FF;*/
-        margin-left: auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .headerMenu {
-        width: 20%;
-        height: 100%;
-        justify-content: center;
-    }
-
-    #divSection1 {
-        width: 100%;
-        height: 38%;
-        background-color: #000000;
-    }
-
-    #divSection1Center {
-        display: flex;
-        width: 100%;
-        height: 100%;
-        padding: 2% 15% 0 15%;
-        box-sizing: border-box;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #divSection1Center h1 {
-        color: white;
-        font-family: system-ui;
-        text-transform: uppercase;
-        line-height: 0.9;
-        font-size: 5vh;
-        margin: 0;
-    }
-
-    #divSection1Center h2 {
-        color: white;
-        font-family: cursive;
-        line-height: 1.2;
-        font-size: 2vh;
-        margin: 0;
-    }
-
-    #divSection1WavesImg {
-        position: absolute;
-        width: 100%;
-        height: 30%;
-        bottom: 12%;
-        background-image: url("./waves1.svg");
-        background-size: 100% auto;
-        background-repeat: no-repeat;
-        background-position: center;
-        opacity: .4;
-    }
-
-    #divSection1BodyImg {
-        width: 30%;
-        height: 70%;
-        background-image: url("./body.svg");
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-
-    #divSection2 {
-        width: 100%;
-        height: 12%;
-        background: linear-gradient(0deg, #1b1725, #000000);
-        padding-bottom: 6vh;
-    }
-
-
-    #divSection2Center {
-        display: flex;
-        width: 100%;
-        height: 100%;
-        padding: 2% 13% 0 13%;
-        box-sizing: border-box;
-        flex-direction: column;
-    }
-
-    #divSection2Center h1 {
-        color: white;
-        font-family: system-ui;
-        text-transform: uppercase;
-        line-height: 0.9;
-        font-size: 5vh;
-        margin: 0;
-    }
-
-    #divSection2Center h2 {
-        color: white;
-        font-family: cursive;
-        line-height: 1.2;
-        font-size: 2vh;
-        margin: 0;
-    }
-
-    #divSection3 {
-        width: 100%;
-        /*height: 12%;*/
-        background: linear-gradient(0deg, #19102b, #1b1725);
-        padding-bottom: 10vh;
-    }
-
-    #divSection3Center {
-        text-align: center;
-    }
-
-    #divSection3Center h1 {
-        color: white;
-        font-family: system-ui;
-        text-transform: uppercase;
-        line-height: 0.9;
-        font-size: 5vh;
-        margin: 0;
-    }
-
-
-    #divSection4 {
-        width: 100%;
-        height: 12%;
-        background: linear-gradient(0deg, #35294f, #000000);
-    }
-
-    #divSection5 {
-        width: 100%;
-        height: 12%;
-        background: linear-gradient(0deg, #35294f, #000000);
-    }
-
-    iframe {
-        width: 1280px;
-        height: 720px;
-    }
-
-
-
-
-    .mb-3 { margin-bottom: 2vh !important; }
-    .mb-6 { margin-bottom: 4vh !important; }
-    .mt-3 { margin-top: 2vh !important; }
-</style>
