reverting repository to working state

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universo do Medo RPG</title>
+    <title>Universo do Medo RPG.</title>
                 <link rel="icon" type="image/png" href="https://s3.sa-east-1.amazonaws.com/universodomedo.com/favicon-32x32.png">
     <style>
 
