--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:image" content="./src/Components/Assets/preview.png" />
+    <meta name="description" content="Mesas Públicas e Gratuitas - RPG de Mesa Tático" />
+    <meta name="twitter:card" content="summary" />
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Universo do Medo</title>
+
+    <title>Universo do Medo RPG</title>
   </head>
   <body>
     <div id="root"></div>
