--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:image" content="./frontend/src/Components/Assets/preview.png" />
-    <meta name="description" content="Mesas Públicas e Gratuitas - RPG de Mesa Tático" />
+    <!-- <meta property="og:image" content="./frontend/src/Components/Assets/preview.png" /> -->
+    <meta property="og:image" content="https://github.com/universodomedo/universodomedo.com/blob/dev/frontend/src/Components/Assets/preview.png?raw=true" />
+    <meta property="og:description" content="Mesas Públicas e Gratuitas - RPG Digital!" />
+    <meta name="description" content="Mesas Públicas e Gratuitas - RPG Digital!" />
     <meta name="twitter:card" content="summary" />
 
+    
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" />
-
+    
     <title>Universo do Medo RPG</title>
+    <meta property="og:title" content="Universo do Medo RPG" />
   </head>
   <body>
     <div id="root"></div>
